# QPALM_rl

./: .gitignore  README.md  pyproject.toml  requirements.txt  x86_64-centos7-linux-gnu.py-build-cmake.config.toml
QPALM/: CMakeLists.txt
QPALM/include/qpalm/: constants.h  inference.h  inference_util.h  types.h
QPALM/inference/: CMakeLists.txt  sac_new.pt
QPALM/inference/include/: inference.h  inference_c_connector.h
QPALM/inference/src/: inference.cpp  inference_c_connector.cpp
QPALM/interfaces/cxx/: CMakeLists.txt
QPALM/interfaces/python/: qpalm.py.cpp
QPALM/interfaces/python/qpalm-debug/: pyproject.toml
QPALM/interfaces/python/qpalm_rl/: __init__.py
QPALM/interfaces/python/test/: test_qpalm.py
QPALM/src/: inference.cpp  inference_util.c  iteration.c  newton.c  nonconvex.c  qpalm.c  solver_interface.c  termination.c  util.c
examples/python/: qpalm_python_demo.py
scripts/dev/: install-locally.sh
toolchains/x86_64-centos7-linux-gnu/: casadi  fftw  flang  googletest  ipopt  mumps  nanobind  openblas  pybind11  pypy3.10-7.3  pypy3.7-v7.3.9  pypy3.8-7.3  pypy3.9  suitesparse  x86_64-centos7-linux-gnu.conan.profile  x86_64-centos7-linux-gnu.py-build-cmake.cross.toml  x86_64-centos7-linux-gnu.toolchain.cmake  zlib
toolchains/x86_64-centos7-linux-gnu/pypy3.7-v7.3.9-linux64/include/: pypy_decl.h
toolchains/x86_64-centos7-linux-gnu/pypy3.7-v7.3.9-linux64/lib_pypy/: _pypy_openssl.c  _sysconfigdata__linux_x86_64-linux-gnu.py
toolchains/x86_64-centos7-linux-gnu/x-tools/x86_64-centos7-linux-gnu/: build.log.bz2
(+253 files in other folders)
